# blender-server-sample

./: .gitmodules  LICENSE  README.md  pnpm-lock.yaml
backend/: .gitignore  README.md  package.json  pyproject.toml
backend/src/: main.py
backend/src/routers/: render.py  render_sample_1.py  svg.py  test.py  text.py
backend/src/utilities/: __init__.py
frontend/src/: counter.ts
